deploy/basket/api/basket-api.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basket-api
  labels:
    component: basket-api
spec:
  replicas: 1
  selector:
    matchLabels:
      component: basket-api
  template:
    metadata:
      labels:
        component: basket-api
    spec:
      containers:
        - name: basket-api
          image: basketapi:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
