deploy/basket/api/basket-api.service.yml
apiVersion: v1
kind: Service
metadata:
  name: basket-api
spec:
  selector:
    component: basket-api
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 80
