deploy/basket/api/basket-api.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basket-api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - backend:
            service:
              name: basket-api
              port:
                number: 8081
          path: /basket(/|$)(.*)
          pathType: Prefix
